[package]
name = "rust-solana"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "2.2.2"
tokio = "1.44.2"
anyhow = "1.0.97"
solana-client = "2.2.7"
spl-memo = "6.0.0"
borsh = "1.5.7"
spl-token-2022 = "8.0.1"
tokio-test = "0.4.4"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
actix-rt = "2.10.0"
bincode = "2.0.1"
serde_json = "1.0.140"

